--- a/路线规划.html
+++ b/路线规划.html
@@ -18,7 +18,7 @@
 </head>
 <body>
 <div id="container"></div>
-<div id="tip" style="left:80px;">请拖拽路径试试<button id="btn" onclick="car()">动画</button></div>
+<div id="tip" style="left:80px;width:500px"><h3>顺风车路线</h3>起点:软件园东二门天桥下（出发时间:2017-1-12周五 18:00）<br />终点:岩溪三十米大街<br />途经点:何厝顶何公交站、何厝边防派出所公交站、集美嘉庚体育馆、欧山(陈巷路口)<br />QQ：530861323<br />手机/微信：18359251360<br /><button id="btn" onclick="car()">动画</button></div>
 <script type="text/javascript">
     var pathSimplifierIns = null;
     var map, route, marker;
@@ -29,10 +29,11 @@
     //绘制初始路径
     var pts = [];
     var path = [];
-    path.push([118.188009, 24.481772]);
-    path.push([118.106966, 24.587761]);
-    path.push([117.774633, 24.638734]);
-    path.push([117.772446, 24.74548]);
+    path.push([118.187488, 24.482162]);
+    path.push([118.188611, 24.485118]);
+    path.push([118.197221, 24.482628]);
+    path.push([117.792954, 24.638756]);
+    path.push([117.772639, 24.744107]);
     map.plugin("AMap.DragRoute", function () {
         route = new AMap.DragRoute(map, path, AMap.DrivingPolicy.LEAST_TIME); //构造拖拽导航类
 
